--- a/index.html
+++ b/index.html
@@ -16,26 +16,185 @@
       <h1>Classic Cheesecake Recipe</h1>
       <article>
         <img src="6dots.svg" alt="6 dots">
-        <p>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no
-        one can deny its simple decadence. For the best results, bake in a water bath.</p>
+        <p class="italic f12">Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a
+          buttery graham cracker
+          crust, no
+          one can deny its simple decadence. For the best results, bake in a water bath.</p>
       </article>
       <img src="photo1.png" alt="recipe">
     </header>
     <main>
       <aside>
+        <div>
+          <img src="spoons.svg" alt="spoons">
+          <p><span>yields</span><span class="orange">12 servings</span></p>
+        </div>
+        <div class="time">
+          <div>
+            <span class="material-icons">
+              schedule
+            </span>
+            <p><span>prep time</span><span>45 minutes</span></p>
+          </div>
+          <div>
+            <span class="material-icons">
+              schedule
+            </span>
+            <p><span>cook time</span><span>1 hour</span></p>
+          </div>
+          <div>
+            <span class="material-icons">
+              schedule
+            </span>
+            <p><span>total time</span><span>7.75 hours</span></p>
+          </div>
+        </div>
+
+
+
+
 
       </aside>
       <section>
-        <div>
+        <div class="ingredients">
           <h2>Ingredients</h2>
-        article
+          <article>
+            <h4>Graham Cracker Crust</h4>
+            <p>
+              <input type="checkbox" name="">
+              <span>
+                1 and 1/2 cups (150g) <span class="bold">graham cracker crumbs</span> (about 10 full sheet graham
+                crackers)
+              </span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>5 Tablespoons (70g) <span class="bold">unsalted butter</span>, melted</span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>1/4 cup (50g) <span class="bold">granulated sugar</span></span>
+            </p>
+          </article>
+          <article>
+            <h4>Cheesecake</h4>
+            <p>
+              <input type="checkbox" name="">
+              <span>four 8-ounce blocks (904g) full-fat <span class="bold">cream cheese</span>, softened to room
+                temperature</span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>1 cup (200g) <span class="bold">granulated sugar</span></span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>1 cup (240g) full-fat <span class="bold">sour cream</span>, at room temperature</span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>1 teaspoon <span class="bold">pure vanilla extract</span></span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>2 teaspoons <span class="bold">fresh lemon juice</span> (optional, but recommended)</span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>3 large <span class="bold">eggs</span>, at room temperature</span>
+            </p>
+            <p>
+              <input type="checkbox" name="">
+              <span>topping suggestions:
+                <span class="italic">salted caramel, lemon curd, strawberry topping, chocolate
+                  ganache, red wine chocolate ganache,
+                  fresh fruit, whipped cream, or raspberry sauce</span>
+                (recipe in notes)</span>
+            </p>
+          </article>
         </div>
-        <div>
+        <div class="instructions">
           <h2>Instructions</h2>
+          <div>
+            <h1>1</h1>
+            <span>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</span>
+          </div>
+          <div>
+            <h1>2</h1>
+            <span><span class="bold">Make the crust:</span> Using a food processor, pulse the graham crackers into
+              crumbs. Pour into a medium bowl and stir in sugar
+              and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will
+              be sandy.
+              Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to
+              grease the pan
+              first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove
+              from the oven
+              and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water
+              bath in step 4.
+              Allow crust to slightly cool as you prepare the filling.</span>
+          </div>
+          <div>
+            <h1>3</h1>
+            <span><span class="bold">Make the filling:</span> Using a handheld or stand mixer fitted with a paddle
+              attachment, beat the cream cheese and granulated
+              sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2
+              minutes. Add the
+              sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs
+              one at a
+              time, beating after each addition until just blended. After the final egg is incorporated into the batter,
+              stop mixing.
+              To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as
+              best you can.</span>
+          </div>
+          <div>
+            <h1>4</h1>
+            <span><span class="bold">Prepare the simple water bath (see note)</span> Boil a pot of water. You need 1
+              inch of water in your roasting pan for the
+              water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up,
+              wrap the
+              aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber
+              spatula or spoon
+              to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot
+              water inside of
+              the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot
+              water in.
+              Whichever is easier for you.)</span>
+          </div>
+          <div>
+            <h1>5</h1>
+            <span>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the
+              cheesecake will
+              slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the
+              cheesecake sit
+              in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool
+              cheesecake
+              completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.</span>
+          </div>
+          <div>
+            <h1>6</h1>
+            <span>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim.
+              Using a clean
+              sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water
+              between each
+              slice.</span>
+          </div>
+          <div>
+            <h1>7</h1>
+            <span>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up
+              to 5 days.</span>
+          </div>
         </div>
       </section>
+      <p class="italic faded">
+        Source: <br>
+        <a href="https://sallysbakingaddiction.com/classic-cheesecake/" target="_blank"
+          rel="noopener noreferrer"></a>https://sallysbakingaddiction.com/classic-cheesecake/
+      </p>
     </main>
-    <footer></footer>
+    <footer>
+      <p>created by <span class="underline">yeshua7dm</span> - <a href="http://devChallenges.io" target="_blank"
+          rel="noopener">devChallenges.io</a></p>
+    </footer>
   </div>
 </body>
 
