completed responsive design

--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@
             <p><span>total time</span><span>7.75 hours</span></p>
           </div>
         </div>
-
-
-
-
-
       </aside>
       <section>
         <div class="ingredients">
@@ -185,12 +180,12 @@
           </div>
         </div>
       </section>
-      <p class="italic faded">
-        Source: <br>
-        <a href="https://sallysbakingaddiction.com/classic-cheesecake/" target="_blank"
-          rel="noopener noreferrer"></a>https://sallysbakingaddiction.com/classic-cheesecake/
-      </p>
     </main>
+    <p class="italic faded">
+      Source: <br class="hide">
+      <a href="https://sallysbakingaddiction.com/classic-cheesecake/" target="_blank"
+        rel="noopener noreferrer"></a>https://sallysbakingaddiction.com/classic-cheesecake/
+    </p>
     <footer>
       <p>created by <span class="underline">yeshua7dm</span> - <a href="http://devChallenges.io" target="_blank"
           rel="noopener">devChallenges.io</a></p>
